<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dayview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- titre de l'Ã©cran -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/title_statistic_view_of_day"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- date pour laquelle on consulte la synthÃ¨se -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <!-- Affichage du nombre de Kcalories AbsorbÃ©es -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_nbcal_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_nbcal_in"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_nbcal_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp" />

    <!-- Affichage du nombre de proteines AbsorbÃ©es -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_nbprot_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_nbprot_in" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_nbprot_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Affichage du nombre de glucides AbsorbÃ©s -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_nbglu_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_nbglu_in" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_nbglu_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Affichage du nombre de lipides AbsorbÃ©s -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_nblip_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_nblip_in" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_nblip_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Affichage du nombre de Kcalories DÃ©pensÃ©es -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_nbcal_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_nbcal_out" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_nbcal_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Affichage du bonus alimentation -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_eat_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_nbcal_out" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_eat_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Affichage du bonus activitÃ© physique -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_phys_activity_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_nbcal_out" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_phys_activity_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- libellÃ© pour l'affichage du montant d'Ã©gergie cumulÃ© pour le cube -->

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_title_total_cube_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_total_cube_energy" />

    <TextView
        android:id="@+id/view_ua_statistic_of_day_tv_data_total_cube_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>